kubernetes/apps/media/navidrome/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`music.pxldi.de`)
      kind: Rule
      services:
        - name: navidrome
          port: 4533
